--- a/index.html
+++ b/index.html
@@ -133,27 +133,29 @@
       <a class="btn btn-dark btn-xl js-scroll-trigger" href="#portfolio">Portfolio</a>
     </div>
   </section>
-  
+
   <section class="p-0" id="portfolio">
     <div class="container-fluid p-0">
       <div class="row no-gutters popup-gallery">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" target="_blank" href="https://szun.github.io/Psychic-Game/">
-            <img class="img-fluid" src="img/portfolio/thumbnails/pyschic_game.png" alt="">
+          <a class="portfolio-box" href="#" onclick="window.open('https://nakrap.github.io/nytimesSearch/');
+          window.open('https://github.com/nakrap/nytimesSearch');">
+            <img class="img-fluid" src="img/portfolio/thumbnails/NYT_Search.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  JavaScript
+                  Ajax
                 </div>
                 <div class="project-name">
-                  Psychic Game
+                  NYT Search
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" target="_blank" href="https://szun.github.io/unit-4-game/">
+          <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/unit-4-game');
+          window.open('https://github.com/szun/unit-4-game');">
             <img class="img-fluid" src="img/portfolio/thumbnails/crystal_img.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -168,7 +170,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" target="_blank" href="https://szun.github.io/TriviaGame/">
+          <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/TriviaGame');
+          window.open('https://github.com/szun/TriviaGame');">
             <img class="img-fluid" src="img/portfolio/thumbnails/TriviaGame.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -183,7 +186,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" target="_blank" href="https://szun.github.io/Giftastic/">
+          <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/Giftastic');
+          window.open('https://github.com/szun/Giftastic');">
             <img class="img-fluid" src="img/portfolio/thumbnails/christmasGifs.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -198,7 +202,8 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" target="_blank" href="https://szun.github.io/TrainTime/">
+            <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/TrainTime');
+            window.open('https://github.com/szun/TrainTime');">
             <img class="img-fluid" src="img/portfolio/thumbnails/train.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -213,8 +218,9 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" target="_blank" href="img/portfolio/fullsize/6.jpg">
-            <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
+            <a class="portfolio-box" href="#" onclick="window.open('https://bigbang008.github.io/project01');
+            window.open('https://github.com/bigbang008/project01');">
+            <img class="img-fluid" src="img/portfolio/thumbnails/project01.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
