--- a/index.html
+++ b/index.html
@@ -64,8 +64,7 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded mb-5">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum sint voluptas quis voluptatum aut delectus! Vel,
-            quos aspernatur. Sed odio dolorum ad molestias sunt quisquam aspernatur labore tenetur quia necessitatibus.</p>
+          <p class="text-faded mb-5">HTML5 - CSS3 - Javascript ES6 - JQuery - Bootstrap 4 - NodeJS - Express - MongoDB - DJangoDB - MySQL - React(JS/Native/360) - AngularJS - Ionic3 - Swift 4 - Java - Android Oreo 8</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -243,8 +242,7 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Let's Get In Touch!</h2>
           <hr class="my-4">
-          <p class="mb-5">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ea animi quo repudiandae illo velit nemo ullam, fugit
-            suscipit fuga magnam quaerat quisquam dolor laboriosam rerum consequuntur, et omnis, sequi ipsam.</p>
+          <p class="mb-5">If you have any questions or would like to get in touch with me, please see both my email and phone number below.</p>
         </div>
       </div>
       <div class="row">
