--- a/Port/index.html
+++ b/Port/index.html
@@ -64,7 +64,8 @@
           <hr>
         </div>
         <div class="col-lg-8 mx-auto">
-          <p class="text-faded mb-5">HTML5 - CSS3 - Javascript ES6 - JQuery - Bootstrap 4 - NodeJS - Express - MongoDB - DJangoDB - MySQL - React(JS/Native/360) - AngularJS - Ionic3 - Swift 4 - Java - Android Oreo 8</p>
+          <h3><strong>Proficiency in Backend Development</strong></h3>
+          <p class="text-faded mb-5">React - Node - Express - Mongoose - Sequelize</p>
           <a class="btn btn-primary btn-xl js-scroll-trigger" href="#about">Find Out More</a>
         </div>
       </div>
@@ -77,14 +78,12 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading text-white">About Me</h2>
           <hr class="light my-4">
-          <p class="text-faded mb-4">Hello World! My name is Sam G. Zun and I'd like to welcome you to my personal website! For the past few years I
-            have been self-teaching myself coding through resources such as Codecademy and Free Code Camp, exploring HTML,
-            CSS, Javascript, Java, Ruby and Ruby on Rails. Currently I am a student of the Northwestern University Coding
-            Bootcamp and am thoroughly motivated to begin a career in Full Stack Web Development. After completing this program
-            my goal is to transfer to complete a bachelor's degree in Computer Science/Economics. Upon completing that bachelor's
-            degree my goal is to attain a masters degree from DePaul University in Software Engineering with a concentration
-            of Software Architecture. Please take a look around my website to get a better understanding of my work or to
-            contact me. And thank you so much for stopping by!</p>
+          <p class="text-faded mb-4">Hello World! My name is Samuel G. Zun. 
+            I am a software engineer specializing in server side architecture.
+          Through my education at Northwestern University, I have garnered
+        a love and deep passion for developing pristine server-side architecture
+      while developing complex and asthetically pleasing front-end's using
+      Node, Express, Sequelize, Mongoose, ReactJS, React-Native and React + Elextron. </p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">My Links</a>
         </div>
       </div>
@@ -137,96 +136,92 @@
     <div class="container-fluid p-0">
       <div class="row no-gutters popup-gallery">
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#" onclick="window.open('https://nakrap.github.io/nytimesSearch/');
-          window.open('https://github.com/nakrap/nytimesSearch');">
-            <img class="img-fluid" src="img/portfolio/thumbnails/NYT_Search.png" alt="">
+          <a class="portfolio-box" onclick="window.open('https://react-my-burger-2020f.firebaseapp.com/');
+          window.open('https://github.com/SZun/React-Burger-Builder');">
+            <img class="img-fluid" src="../../burger.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Ajax
+                  ReactJS + Firebase
                 </div>
                 <div class="project-name">
-                  NYT Search
+                  React My Burger
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/unit-4-game');
-          window.open('https://github.com/szun/unit-4-game');">
-            <img class="img-fluid" src="img/portfolio/thumbnails/crystal_img.png" alt="">
+          <a class="portfolio-box" onclick="window.open('https://murmuring-bayou-29180.herokuapp.com/');
+          window.open('https://github.com/nakrap/feed/');">
+            <img class="img-fluid" src="../../feed.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  JQuery
+                   Node + Express + Sequelize + Polished UI
                 </div>
                 <div class="project-name">
-                  Crystals Collector
+                  Feed
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/TriviaGame');
-          window.open('https://github.com/szun/TriviaGame');">
-            <img class="img-fluid" src="img/portfolio/thumbnails/TriviaGame.png" alt="">
+          <a class="portfolio-box" href="https://github.com/SZun/Stopwatch" target="_blank" >
+            <img class="img-fluid" src="../../stopwatch.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  JavaScript/JQuery
+                    React Native
                 </div>
                 <div class="project-name">
-                  Trivia Game
+                    iOS Stopwatch Clone
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/Giftastic');
-          window.open('https://github.com/szun/Giftastic');">
-            <img class="img-fluid" src="img/portfolio/thumbnails/christmasGifs.png" alt="">
+          <a class="portfolio-box" target="_blank" href="https://github.com/SZun/vidly">
+            <img class="img-fluid" src="../../vidly.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Ajax/API's
+                  Node + Express + Mongoose + Much More...
                 </div>
                 <div class="project-name">
-                  Giftastic
+                  Vidly
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="#" onclick="window.open('https://szun.github.io/TrainTime');
-            window.open('https://github.com/szun/TrainTime');">
-            <img class="img-fluid" src="img/portfolio/thumbnails/train.png" alt="">
+            <a class="portfolio-box" href="https://github.com/SZun/iWeather" target="_blank">
+            <img class="img-fluid" src="../../weather.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Firebase
+                    Ionic
                 </div>
                 <div class="project-name">
-                  Train Time
+                  iWeather
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="#" onclick="window.open('https://bigbang008.github.io/project01');
-            window.open('https://github.com/bigbang008/project01');">
-            <img class="img-fluid" src="img/portfolio/thumbnails/project01.png" alt="">
+            <a class="portfolio-box" href="#" onclick="window.open('https://github.com/SZun/mongodb-scraper');">
+            <img class="img-fluid" src="../../scraper.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Front-End Development
+                  Mongoose
                 </div>
                 <div class="project-name">
-                  Connect Us
+                  MongoDB Scraper
                 </div>
               </div>
             </div>
