--- a/Port/index.html
+++ b/Port/index.html
@@ -138,7 +138,7 @@
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" onclick="window.open('https://react-my-burger-2020f.firebaseapp.com/');
           window.open('https://github.com/SZun/React-Burger-Builder');">
-            <img class="img-fluid" src="../../burger.png" alt="">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/burger.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
@@ -154,7 +154,7 @@
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" onclick="window.open('https://murmuring-bayou-29180.herokuapp.com/');
           window.open('https://github.com/nakrap/feed/');">
-            <img class="img-fluid" src="../../feed.png" alt="">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/feed.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
@@ -169,7 +169,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" href="https://github.com/SZun/Stopwatch" target="_blank" >
-            <img class="img-fluid" src="../../stopwatch.png" alt="">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/stopwatch.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
@@ -184,7 +184,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" target="_blank" href="https://github.com/SZun/vidly">
-            <img class="img-fluid" src="../../vidly.png" alt="">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/vidly.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
@@ -199,7 +199,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="https://github.com/SZun/iWeather" target="_blank">
-            <img class="img-fluid" src="../../weather.png" alt="">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/weather.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
@@ -214,7 +214,7 @@
         </div>
         <div class="col-lg-4 col-sm-6">
             <a class="portfolio-box" href="#" onclick="window.open('https://github.com/SZun/mongodb-scraper');">
-            <img class="img-fluid" src="../../scraper.png" alt="">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/scraper.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
