Updating the about me section

--- a/Port/index.html
+++ b/Port/index.html
@@ -83,7 +83,7 @@
           Through my education at Northwestern University, I have garnered
         a love and deep passion for developing pristine server-side architecture
       while developing complex and asthetically pleasing front-end's using
-      Node, Express, Sequelize, Mongoose, ReactJS, React-Native and React + Elextron. </p>
+      Node, Express, Sequelize, Mongoose, ReactJS, React-Native and React + Electron. </p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">My Links</a>
         </div>
       </div>
