--- a/Port/index.html
+++ b/Port/index.html
@@ -78,12 +78,10 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading text-white">About Me</h2>
           <hr class="light my-4">
-          <p class="text-faded mb-4">Hello World! My name is Samuel G. Zun. 
-            I am a software engineer specializing in server side architecture.
-          Through my education at Northwestern University, I have garnered
-        a love and deep passion for developing pristine server-side architecture
-      while developing complex and asthetically pleasing front-end's using
-      Node, Express, Sequelize, Mongoose, ReactJS, React-Native and React + Electron. </p>
+          <p class="text-faded mb-4">Hello World! My name is Samuel G. Zun. I am a software engineer specializing in server
+            side architecture. Through my education at Northwestern University, I have garnered a love and deep passion for
+            developing pristine server-side architecture while developing complex and asthetically pleasing front-end's using
+            Node, Express, Sequelize, Mongoose, ReactJS, React-Native and React + Electron. </p>
           <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">My Links</a>
         </div>
       </div>
@@ -137,7 +135,7 @@
       <div class="row no-gutters popup-gallery">
         <div class="col-lg-4 col-sm-6">
           <a class="portfolio-box" onclick="window.open('https://react-my-burger-2020f.firebaseapp.com/');
-          window.open('https://github.com/SZun/React-Burger-Builder');">
+          window.open('https://github.com/SZun/React-Burger-Builder');" target="_blank">
             <img class="img-fluid" src="./img/portfolio/thumbnails/burger.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -152,31 +150,31 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" onclick="window.open('https://murmuring-bayou-29180.herokuapp.com/');
-          window.open('https://github.com/nakrap/feed/');">
-            <img class="img-fluid" src="./img/portfolio/thumbnails/feed.png" alt="">
+          <a class="portfolio-box" onclick="window.open('https://frozen-harbor-94469.herokuapp.com/');
+          window.open('https://github.com/SZun/Bottled');" target="_blank">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/Bottled.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                   Node + Express + Sequelize + Polished UI
+                  React + Redux + Node + Express + MongoDB
                 </div>
                 <div class="project-name">
-                  Feed
+                  Bottled
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-          <a class="portfolio-box" href="https://github.com/SZun/Stopwatch" target="_blank" >
+          <a class="portfolio-box" href="https://github.com/SZun/Stopwatch" target="_blank">
             <img class="img-fluid" src="./img/portfolio/thumbnails/stopwatch.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                    React Native
+                  React Native
                 </div>
                 <div class="project-name">
-                    iOS Stopwatch Clone
+                  iOS Stopwatch Clone
                 </div>
               </div>
             </div>
@@ -198,30 +196,32 @@
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="https://github.com/SZun/iWeather" target="_blank">
-            <img class="img-fluid" src="./img/portfolio/thumbnails/weather.png" alt="">
+          <a class="portfolio-box" onclick="window.open('https://sleepy-cove-35335.herokuapp.com/');
+          window.open('https://github.com/SZun/DevConnector');" target="_blank">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/DevConnector.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                    Ionic
+                  React + Redux + Node + Express + MongoDB
                 </div>
                 <div class="project-name">
-                  iWeather
+                  DevConnector
                 </div>
               </div>
             </div>
           </a>
         </div>
         <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="#" onclick="window.open('https://github.com/SZun/mongodb-scraper');">
-            <img class="img-fluid" src="./img/portfolio/thumbnails/scraper.png" alt="">
+          <a class="portfolio-box" href="#" onclick="window.open('https://damp-bayou-34571.herokuapp.com/');
+          window.open('https://github.com/SZun/emaily');" target="_blank">
+            <img class="img-fluid" src="./img/portfolio/thumbnails/Emaily.png" alt="">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
                 <div class="project-category text-faded">
-                  Mongoose
+                  React + Redux + Node + Express + MongoDB
                 </div>
                 <div class="project-name">
-                  MongoDB Scraper
+                  Emaily
                 </div>
               </div>
             </div>
@@ -237,13 +237,14 @@
         <div class="col-lg-8 mx-auto text-center">
           <h2 class="section-heading">Let's Get In Touch!</h2>
           <hr class="my-4">
-          <p class="mb-5">If you have any questions or would like to get in touch with me, please see both my email and phone number below.</p>
+          <p class="mb-5">If you have any questions or would like to get in touch with me, please see both my email and phone
+            number below.</p>
         </div>
       </div>
       <div class="row">
         <div class="col-lg-4 ml-auto text-center">
           <i class="fa fa-phone fa-3x mb-3 sr-contact"></i>
-          <p>847-226-2806</p>
+          <p>847-964-3612</p>
         </div>
         <div class="col-lg-4 mr-auto text-center">
           <i class="fa fa-envelope-o fa-3x mb-3 sr-contact"></i>
